err/p01.recipe.setup.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ZConfig'...
Listing './lib/python3.5/site-packages/ZConfig/components'...
Listing './lib/python3.5/site-packages/ZConfig/components/basic'...
Listing './lib/python3.5/site-packages/ZConfig/components/basic/tests'...
Listing './lib/python3.5/site-packages/ZConfig/components/logger'...
Listing './lib/python3.5/site-packages/ZConfig/components/logger/tests'...
Listing './lib/python3.5/site-packages/ZConfig/tests'...
Listing './lib/python3.5/site-packages/ZConfig/tests/input'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library/thing'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library/thing/extras'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library/widget'...
Listing './lib/python3.5/site-packages/ZConfig/tests/zipsource'...
Listing './lib/python3.5/site-packages/ZConfig/tests/zipsource/foo'...
Listing './lib/python3.5/site-packages/ZConfig/tests/zipsource/foo/sample'...
Listing './lib/python3.5/site-packages/ZConfig-3.2.0.dist-info'...
Listing './lib/python3.5/site-packages/p01'...
Listing './lib/python3.5/site-packages/p01/recipe'...
Listing './lib/python3.5/site-packages/p01/recipe/setup'...
Compiling './lib/python3.5/site-packages/p01/recipe/setup/__init__.py'...
***   File "./lib/python3.5/site-packages/p01/recipe/setup/__init__.py", line 38
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/p01/recipe/setup/copy.py'...
***   File "./lib/python3.5/site-packages/p01/recipe/setup/copy.py", line 208
    print "Remove old folder '%s'" % target
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/p01/recipe/setup/ctags.py'...
***   File "./lib/python3.5/site-packages/p01/recipe/setup/ctags.py", line 125
    print "ctags subprocess called with the following arguments:"
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/p01/recipe/setup/download.py'...
***   File "./lib/python3.5/site-packages/p01/recipe/setup/download.py", line 168
    print 'Override existing target: %s' % dest
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/p01/recipe/setup/fetch.py'...
***   File "./lib/python3.5/site-packages/p01/recipe/setup/fetch.py", line 266
    except urllib2.HTTPError, v:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p01/recipe/setup/i18ncompile.py'...
***   File "./lib/python3.5/site-packages/p01/recipe/setup/i18ncompile.py", line 58
    print 'Compile language "%s" for "%s"' % (language, domain)
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p01/recipe/setup/i18nextract.py'...
***   File "./lib/python3.5/site-packages/p01/recipe/setup/i18nextract.py", line 157
    except getopt.error, msg:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p01/recipe/setup/i18nmergeall.py'...
***   File "./lib/python3.5/site-packages/p01/recipe/setup/i18nmergeall.py", line 65
    print 'Merging language "%s", domain "%s"' %(language, domain)
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p01/recipe/setup/i18nstats.py'...
***   File "./lib/python3.5/site-packages/p01/recipe/setup/i18nstats.py", line 106
    print 'Language    Total    Done    Not Done    Fuzzy      Done %'
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/p01/recipe/setup/importchecker.py'...
***   File "./lib/python3.5/site-packages/p01/recipe/setup/importchecker.py", line 375
    print "please provide a valid path %r" % path
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/p01/recipe/setup/scripts.py'...
***   File "./lib/python3.5/site-packages/p01/recipe/setup/scripts.py", line 32
    print "ERROR: %s does not exist" % path
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/p01/recipe/setup/winservice.py'...
***   File "./lib/python3.5/site-packages/p01/recipe/setup/winservice.py", line 194
    print "winservice: Not a windows platform, doing nothing"
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/p01.recipe.setup-0.8.11.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc/recipe'...
Listing './lib/python3.5/site-packages/zc/recipe/egg'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/zc.recipe.egg-2.0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
